@@ -1,3 +1,7 @@
+2010-08-05  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avtinternals.h: new file
+
 2010-08-04  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtgrmsg.c: new file
